--- a/themes/beautifulhugo/static/css/main.css
+++ b/themes/beautifulhugo/static/css/main.css
@@ -100,6 +100,7 @@ img {
 
 .navbar-custom {
   background: white;
+  border-bottom: none;
   /* background: #F5F5F5; */
   /* border-bottom: 1px solid #EAEAEA; */
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
