--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,14 +2,14 @@
 <html lang="en">
 
 <head>
+  <title>Divan Visagie</title>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-
-  <title>Divan Visagie</title>
+  <meta name="description" content="{{TITLE}} - {{DESCRIPTION}}">
+  <meta property="og:description" content="{{TITLE}} - {{DESCRIPTION}}" />
   <meta property="og:title" content="{{TITLE}}" />
   <meta name="twitter:title" content="{{TITLE}}" />
-  <meta property="og:description" content="{{DESCRIPTION}}" />
   <meta name="author" content="Divan Visagie" />
   <link href='/favicon.ico' rel='icon' type='image/x-icon' />
   <meta property="og:image" content="{{CARD_IMAGE}}" />
