--- a/public/css/main.css
+++ b/public/css/main.css
@@ -157,3 +157,11 @@ footer {
   color: #4C566A;
   justify-content: right;
 }
+
+p > code {
+    background: #eee;
+    padding-left: 5px;
+    padding-right: 5px;
+    border-radius: 5px;
+    font-family: monospace;
+}
