--- a/templates/layout.html
+++ b/templates/layout.html
@@ -23,6 +23,33 @@
   <link rel="stylesheet" href="/css/styles.css" />
   <link rel="stylesheet" href="/css/main.css" />
 
+  <script>
+    // https://stackoverflow.com/questions/56300132/how-to-over-ride-css-prefers-color-scheme-setting
+    //determines if the user has a set theme
+    function detectColorScheme(){
+        var theme="light";    //default to light
+
+        //local storage is used to override OS theme settings
+        if(localStorage.getItem("theme")){
+            if(localStorage.getItem("theme") == "dark"){
+                var theme = "dark";
+            }
+        } else if(!window.matchMedia) {
+            //matchMedia method not supported
+            return false;
+        } else if(window.matchMedia("(prefers-color-scheme: dark)").matches) {
+            //OS theme setting detected as dark
+            var theme = "dark";
+        }
+
+        //dark theme preferred, set document with a `data-theme` attribute
+        if (theme=="dark") {
+            document.documentElement.setAttribute("data-theme", "dark");
+        }
+    }
+    detectColorScheme();
+  </script>
+
   <script type="application/javascript">
     var doNotTrack = false;
     if (!doNotTrack) {
@@ -32,6 +59,7 @@
       ga('send', 'pageview');
     }
   </script>
+ 
   <script async src='https://www.google-analytics.com/analytics.js'></script>
 
 </head>
@@ -63,6 +91,7 @@
     Divan Visagie • 2019 • <a href="mailto:me@dvisagie.com">me@dvisagie.com</a>
   </footer>
 
+  <script src="/js/index.js"></script>
 </body>
 
 </html>
