--- a/public/css/main.css
+++ b/public/css/main.css
@@ -77,6 +77,12 @@ nav .links {
   width: fit-content;
 }
 
+@media (max-width: 860px) {
+  nav .links {
+    margin-right: 10px;
+  }
+}
+
 nav h1 {
   margin-top: 17px;
   margin-bottom: 2px; 
