--- a/public/css/main.css
+++ b/public/css/main.css
@@ -223,3 +223,15 @@ p > code {
   opacity: 0.9; 
   font-size: 12px;
 }
+
+table, td, th {
+  text-align: left;
+  padding: 5px 16px;
+  border-collapse: collapse;
+  border: 1px solid var(--subtitle-color);
+}
+
+table {
+  margin-left: auto;
+  margin-right: auto;
+}
