--- a/public/css/main.css
+++ b/public/css/main.css
@@ -9,7 +9,7 @@
   --text-color: black;
   --title-color: #222;
   --subtitle-color: #333;
-  --link-color: #2222ff;
+  --link-color: #222222;
   --link-color-visited: purple;
 }
 
@@ -31,7 +31,7 @@
 html {
   width: 100%;
   font-weight: 400;
-  font-family: "SF Pro Text", "SF Pro Icons", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+  font-family: monospace;
 }
 
 a {
