--- a/public/css/main.css
+++ b/public/css/main.css
@@ -9,7 +9,7 @@
   --text-color: black;
   --title-color: #222;
   --subtitle-color: #333;
-  --link-color: #222222;
+  --link-color: #0555b1;
   --link-color-visited: purple;
 }
 
