Now with post tests

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -21,10 +21,11 @@
 
   <meta name="generator" content="Custom" />
   <link rel="stylesheet" href="/css/styles.css" />
+  <link rel="stylesheet" href="/css/highlight.min.css" />
   <link rel="stylesheet" href="/css/main.css" />
 
   <script>
-   
+
   </script>
 
   <script type="application/javascript">
@@ -36,7 +37,7 @@
       ga('send', 'pageview');
     }
   </script>
- 
+
   <script async src='https://www.google-analytics.com/analytics.js'></script>
 
 </head>
@@ -65,7 +66,8 @@
   </div>
 
   <footer>
-    Divan Visagie • 2019 • <a href="mailto:me@dvisagie.com">me@dvisagie.com</a> • <span><a href="/podcast">Podcast</a><span></span>
+    Divan Visagie • 2019 • <a href="mailto:me@dvisagie.com">me@dvisagie.com</a> • <span><a
+        href="/podcast">Podcast</a><span></span>
   </footer>
 
   <script src="/js/index.js"></script>
