--- a/public/css/main.css
+++ b/public/css/main.css
@@ -36,7 +36,7 @@
 html {
   width: 100%;
   font-weight: 400;
-  font-family: 'Andale mono',monospace;
+  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif;
 }
 
 a {
