--- a/templates/layout.html
+++ b/templates/layout.html
@@ -57,6 +57,10 @@
           <a href="/about">About</a>
         </h2>
       </div>
+
+      <div id="darkmode-button">
+
+      </div>
     </div>
 
   </nav>
