darkmode button change

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -16,8 +16,8 @@
 }
 
 [data-theme="dark"] {
-  --toolbar-background: rgb(27,27,27);
-  --code-background: rgb(27,27,27);
+  --toolbar-background: #222222;
+  --code-background: #222;
   --background-color: #282828;
   --text-color: #eee;
   --title-color: #eee;
@@ -83,9 +83,9 @@ nav .links {
   width: fit-content;
 }
 
-@media (max-width: 860px) {
-  nav .links {
-    margin-right: 10px;
+@media (max-width: 436px) {
+  .full {
+    display: none;
   }
 }
 
@@ -256,35 +256,57 @@ table {
   https://css-tricks.com/creating-yin-yang-loaders-web/
 */
 #darkmode-button {
-  transition: linear 240ms;
+  cursor: pointer;
+  user-select: none;
+  transform: rotate(90deg);
+  transition: linear 270ms;
+  padding-right: 0;
   margin-top: 9px;
+  margin-left: 10px;
   width: 48px;
   height: 48px;
   display: flex;
   border-radius: 50%;
   align-items: center;
   background: linear-gradient(var(--toolbar-background) 50%, white 0);
-  transform: rotate(90deg);
 }
 
-#darkmode-button:before, #darkmode-button:after {
-  flex: 1;
-  height: 50%;
+/* Light Mode */
+#darkmode-button .black, #darkmode-button .white {
+  flex-direction: row;
   border-radius: 50%;
   background: var(--toolbar-background);
   border: solid 7px white;
-  box-sizing: border-box;
   content: '';
+  box-sizing: border-box;
 }
-
-#darkmode-button:after {
+#darkmode-button .black { /*Black circle*/
+  width: 30px;
+  height: 30px;
+}
+#darkmode-button .white { /*white circle*/
   background: white;
   border-color: var(--toolbar-background);
+  width: 18px;
+  height: 18px;
 }
 
+/* Dark Mode */
 [data-theme="dark"] #darkmode-button { 
   transform: rotate(270deg);
 }
+
+[data-theme="dark"] #darkmode-button .black { /*Black circle*/
+  width: 18px !important;
+  height: 18px !important;
+}
+
+[data-theme="dark"] #darkmode-button .white { /*White circle*/
+  width: 30px !important;
+  height: 30px !important;
+}
+
+
 
 
 
