--- a/templates/layout.html
+++ b/templates/layout.html
@@ -65,7 +65,7 @@
   </div>
 
   <footer>
-    Divan Visagie • 2019 • <a href="mailto:me@dvisagie.com">me@dvisagie.com</a> • <span><a
+    Divan Visagie • 2019-21 • <a href="mailto:me@dvisagie.com">me@dvisagie.com</a> • <span><a
         href="/podcast">Podcast</a><span></span>
   </footer>
 
