--- a/public/css/main.css
+++ b/public/css/main.css
@@ -35,7 +35,7 @@
 html {
   width: 100%;
   font-weight: 400;
-  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif;
+  font-family: Lexend, Helvetica Neue,sans-serif;
 }
 
 a {
@@ -92,7 +92,6 @@ nav .links {
 nav h1 {
   margin-top: 17px;
   margin-bottom: 2px; 
-  font-weight: 400;
 }
 
 nav h2 {
