--- a/templates/layout.html
+++ b/templates/layout.html
@@ -23,7 +23,8 @@
   <link rel="stylesheet" href="/css/styles.css" />
   <link rel="stylesheet" href="/css/highlight.min.css" />
   <link rel="stylesheet" href="/css/main.css" />
-
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@400;500&display=swap" rel="stylesheet">
   <script type="application/javascript">
     var doNotTrack = false;
     if (!doNotTrack) {
