--- a/templates/layout.html
+++ b/templates/layout.html
@@ -25,6 +25,10 @@
   <link rel="stylesheet" href="/css/main.css" />
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@400;500&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Lexend:wght@400;600&family=Roboto+Mono:ital,wght@0,400;1,300&display=swap"
+    rel="stylesheet">
+
   <script type="application/javascript">
     var doNotTrack = false;
     if (!doNotTrack) {
