--- a/public/css/main.css
+++ b/public/css/main.css
@@ -34,7 +34,6 @@
 
 html {
   width: 100%;
-  font-weight: 400;
   font-family: Lexend, Helvetica Neue,sans-serif;
 }
 
@@ -96,7 +95,6 @@ nav h1 {
 
 nav h2 {
   padding-top: 4px;
-  font-weight: 400;
   padding-right: 22px;
   font-size: larger;
   float: right;
@@ -110,18 +108,14 @@ body {
   width:100%;
   min-height: 100vh;
   font-size: medium;
-  line-height: 1.47;
-  letter-spacing: -0.010em;
 }
 
 h1 {
   color: var(--title-color);
-  font-weight: 500;
 }
 
 h2 {
   color: var(--subtitle-color);
-  font-weight: 500;
 }
 
 img{
@@ -130,12 +124,12 @@ img{
   margin-left:auto;
   margin-right:auto;
   display: flex;
-  border-radius: 5px;
+  border-radius: .7em;
   background: white;
 }
 
 pre, .codehilite {
-  border-radius: 5px;
+  border-radius: .7em;
 }
 
 pre {
