--- a/templates/layout.html
+++ b/templates/layout.html
@@ -57,7 +57,7 @@
   </div>
 
   <footer>
-    Divan Visagie • Copyright 2019-21 • <a href="mailto:me@dvisagie.com">me@dvisagie.com</a> • <span><a
+    Divan Visagie • Copyright 2019-21 • <a href="mailto:me@dvisagie.com">me@divanv.com</a> • <span><a
         href="/podcast">Podcast</a><span></span>
   </footer>
 
