--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,75 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <title>{{TITLE}}Divan Visagie</title>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=5.0"
+    />
+    <meta name="description" content="{{TITLE}} - {{DESCRIPTION}}" />
+    <meta property="og:description" content="{{TITLE}} - {{DESCRIPTION}}" />
+    <meta property="og:title" content="{{TITLE}}" />
+    <meta name="twitter:title" content="{{TITLE}}" />
+    <meta name="author" content="Divan Visagie" />
+    <link href="/favicon.ico" rel="icon" type="image/x-icon" />
+    <meta property="og:image" content="{{CARD_IMAGE}}" />
+    <meta name="twitter:image" content="{{CARD_IMAGE}}" />
+    <meta name="twitter:card" content="summary" />
+    <meta property="og:url" content="/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Divan Visagie" />
 
-<head>
-  <title>{{TITLE}}Divan Visagie</title>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
-  <meta name="description" content="{{TITLE}} - {{DESCRIPTION}}">
-  <meta property="og:description" content="{{TITLE}} - {{DESCRIPTION}}" />
-  <meta property="og:title" content="{{TITLE}}" />
-  <meta name="twitter:title" content="{{TITLE}}" />
-  <meta name="author" content="Divan Visagie" />
-  <link href='/favicon.ico' rel='icon' type='image/x-icon' />
-  <meta property="og:image" content="{{CARD_IMAGE}}" />
-  <meta name="twitter:image" content="{{CARD_IMAGE}}" />
-  <meta name="twitter:card" content="summary" />
-  <meta property="og:url" content="/" />
-  <meta property="og:type" content="website" />
-  <meta property="og:site_name" content="Divan Visagie" />
+    <meta name="generator" content="Custom" />
+    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="/css/highlight.min.css" />
+    <link rel="stylesheet" href="/css/main.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lexend:wght@100;300;400;500&family=Roboto+Mono:ital,wght@0,400;1,300&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-WZVBVPWY66"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || []
+      function gtag() {
+        dataLayer.push(arguments)
+      }
+      gtag('js', new Date())
 
-  <meta name="generator" content="Custom" />
-  <link rel="stylesheet" href="/css/styles.css" />
-  <link rel="stylesheet" href="/css/highlight.min.css" />
-  <link rel="stylesheet" href="/css/main.css" />
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link
-    href="https://fonts.googleapis.com/css2?family=Lexend:wght@100;300;400;500&family=Roboto+Mono:ital,wght@0,400;1,300&display=swap"
-    rel="stylesheet">
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-WZVBVPWY66"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+      gtag('config', 'G-WZVBVPWY66')
+    </script>
+  </head>
 
-    gtag('config', 'G-WZVBVPWY66');
-  </script>
-</head>
+  <body>
+    <nav>
+      <div>
+        <h1>
+          <a href="/">Divan <span class="full">Visagie</span></a>
+        </h1>
 
-<body>
-  <nav>
-    <div>
-      <h1>
-        <a href="/">Divan <span class="full">Visagie<span></a>
-      </h1>
-
-      <div class="links">
-        <h2>
-          <a href="/">Posts</a>
-        </h2>
-        <h2>
-          <a href="/about">About</a>
-        </h2>
-        <div id="darkmode-button">
-          <div class="black"></div>
-          <div class="white"></div>
+        <div class="links">
+          <h2>
+            <a href="/">Posts</a>
+          </h2>
+          <h2>
+            <a href="/about">About</a>
+          </h2>
+          <div id="darkmode-button">
+            <div class="black"></div>
+            <div class="white"></div>
+          </div>
         </div>
       </div>
-    </div>
-  </nav>
+    </nav>
 
-  <div class="content">
-    {{CONTENT}}
-  </div>
+    <div class="content">{{CONTENT}}</div>
 
-  <footer>
-    Divan Visagie • Copyright 2019-21 • <a href="mailto:me@divanv.com">me@divanv.com</a> • <span><a
-        href="/podcast">Podcast</a><span></span>
-  </footer>
+    <footer>
+      Divan Visagie • Copyright 2019-21 •
+      <a href="mailto:me@divanv.com">me@divanv.com</a> •
+      <span><a href="/podcast">Podcast</a></span>
+    </footer>
 
-  <script src="/js/index.js"></script>
-</body>
-
+    <script src="/js/index.js"></script>
+  </body>
 </html>
